--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -35,6 +35,8 @@
                                 <tr>
                                     <th>Название темы</th>
                                     <th>Описание</th>
+                                    <th>Часы</th>
+                                    <th>Сходство</th>
                                 </tr>
                             </thead>
                             <tbody>
