подсветка бледно-розовым для исключительно плохих случаев

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -178,4 +178,13 @@ tr.highlighted {
     .topics-panel, .functions-panel {
         flex: 1;
     }
+}
+
+.low-similarity {
+    background-color: #ffe6ea !important;
+}
+
+.recommendation-warning {
+    background-color: #ffe6ea !important;
+    color: #b71c1c;
 } 
