подсветка выбора строки

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -29,6 +29,12 @@
                         <option value="tfidf">TF-IDF</option>
                     </select>
                 </div>
+                <div class="сonfiguration-type">
+                    <label for="configuration-id">Конфигурация:</label>
+                    <select id="configuration-id">
+                        <option value="">Выберите конфигурацию...</option>
+                    </select>
+                </div>
             </div>
         </header>
 
