--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -25,8 +25,8 @@
             <option value="">Выберите конфигурацию</option>
         </select>
 
-        <button id="show-keywords" class="btn btn-primary">Ключевые слова</button>
-        <button id="show-isolated" class="btn btn-warning">Изолированные элементы</button>
+        <button id="show-keywords" class="button">Ключевые слова</button>
+        <button id="show-isolated" class="button">Изолированные элементы</button>
     </div>
 
     <div class="main-content">
